--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <section class="intro">
     <img class="profile" src ="https://raw.githubusercontent.com/love-energy/1111/main/IMG-20230116-WA0001.jpg" alt="张维伦">
     <div class="card">
-<h1>张维伦</h1>
+<h1>张维伦老师</h1>
       <h2>爱能量创办人
 </p>
 </h2>     
